Refactored code. Fixed some typos.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1151,6 +1151,9 @@
         <item>Nombre femenino compuesto</item>
         <item>Nombre masculino doble</item>
         <item>Nombre femenino doble</item>
+        <item>Nombre masculino de pila</item>
+        <item>Nombre femenino de pila</item>
+        <item>Nombre de pila</item>
         <item>Apellido</item>
         <item>Apellido doble</item>
         <item>Nombre masculino simple</item>
