--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1151,6 +1151,9 @@
         <item>Double-barrelled female forename</item>
         <item>Double male forename</item>
         <item>Double female forename</item>
+        <item>Male given name</item>
+        <item>Female given name</item>
+        <item>Given name</item>
         <item>Surname</item>
         <item>Dual surname</item>
         <item>Male simple name</item>
